# ReproPilot-AgenticReproLab

./: .gitignore  README.md  pyproject.toml
src/repropilot/: cli.py  config.py
src/repropilot/core/: agent.py  prompts.py  types.py
src/repropilot/llm/: base.py  openai_chat.py
src/repropilot/memory/: sqlite_log.py  vector_memory.py
src/repropilot/tools/: base.py  fs_tool.py  pdf_tool.py  shell_tool.py
src/repropilot/workflows/: reproduce_paper.py
tests/: test_imports.py
