[project]
name = "repropilot"
version = "0.1.0"
description = "ReproPilot: Paper -> Reproducible GitHub Repo AI Agent"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "requests>=2.31.0",
  "pypdf>=4.2.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
  "openai>=1.40.0",
]

[project.scripts]
repropilot = "repropilot.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

